fixtures/frontend/milestone-1/invalid/regex_invalid_quantifier.aivi
value brokenPattern = rx"a{2,1}"
